# binance_kraken_trader_example

./: .clang-format  CMakeLists.txt  README.md  clang-format.py  conanfile.txt
bot/: main.cpp
bot/arbitrageEngine/: ArbitrageEngine.hpp  CMakeLists.txt
bot/arbitrageEngine/src/: ArbitrageEngine.cpp
bot/binanceWebSocketClient/: CMakeLists.txt  webSocketClient.hpp
bot/binanceWebSocketClient/src/: webSocketClient.cpp
bot/krakenWebSocketClient/: CMakeLists.txt  krakenWebSocketClient.hpp
bot/krakenWebSocketClient/src/: krakenWebSocketClient.cpp
bot/logger/: CMakeLists.txt  logger.hpp
bot/logger/src/: logger.cpp
bot/marketMakingEngine/: CMakeLists.txt  MarketMakingEngine.hpp
bot/marketMakingEngine/src/: MarketMakingEngine.cpp
bot/orderBook/: orderBook.hpp
bot/orderBook/src/: orderBook.cpp
bot/order_book/: CMakeLists.txt  orderBook.hpp
bot/order_book/src/: orderBook.cpp
web_client/: main.cpp
web_client/webSocketClient/: CMakeLists.txt  webSocketClient.hpp
web_client/webSocketClient/src/: webSocketClient.cpp
